--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-numpy
+numpy# linear algebra
 pandas
 tqdm
 numpy
 nltk
+re
 matplotlib
 gensim
 sklearn
-seaborn
+seabor
 umap
 wordcloud
 stop_words
+keras
+pickle
